<resources>
    <string name="app_name" translatable="false">Business Card</string>
    <string name="web_resume" translatable="false">Head Hunter</string>
    <string name="my_name">Бувака Сергей</string>
    <string name="my_position">Android Developer</string>
    <string name="my_phone_number" translatable="false">8 968 961 36 00</string>
    <string name="about_me">В течении года занимаюсь обучением разработке приложений под Android.
До этого времени моя работа не была связана с IT-сферой.
Имею жизенную цель и уверенно к ней иду. Любой свой навык всегда стараюсь совершенствовать.
Дружелюбен, общителен, быстро адаптируюсь к различным ситуациям.
Очень люблю читать: художественную литературу, о личной эффективности, техническую литературу.
В свободное время занимаюсь спортом, катаюсь на велосипеде.
</string>
    <string name="hint">Enter a message</string>
    <string name="action_send_message">Send Message</string>
    <string name="menu_title">About me</string>
    <string name="disclaimer">© 2018 Sergey Buvaka</string>
    <string name="news_photo_description">News Photo</string>
    <string name="error_message">Loading news was unsuccessful</string>
    <string name="action_retry">Retry</string>
    <string name="cont_description_decoration" translatable="false">Decoration</string>
    <string name="item_category">Category</string>
    <string name="intro_greeting">Welcome!</string>
</resources>
