<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/item_news_corner_radius"
                app:cardElevation="@dimen/item_news_elevation"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/my_web_link"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/yellow_background" />

                    <ImageView
                        android:id="@+id/my_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/my_web_link"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/my_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/my_photo" />

                    <TextView
                        android:id="@+id/my_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/indentation"
                        android:layout_marginTop="@dimen/indentation"
                        android:fontFamily="serif"
                        android:text="@string/my_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/name_text_size" />

                    <TextView
                        android:id="@+id/my_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_name"
                        android:layout_alignStart="@id/my_name"
                        android:layout_marginTop="@dimen/indentation"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/my_position"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/position_text_size" />

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="32dp"
                        android:layout_height="22dp"
                        android:layout_below="@id/my_position"
                        android:layout_alignStart="@id/my_position"
                        android:layout_marginTop="@dimen/indentation"
                        app:srcCompat="@drawable/phone" />

                    <TextView
                        android:id="@+id/my_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_position"
                        android:layout_marginStart="@dimen/about_activity_margin"
                        android:layout_marginTop="@dimen/indentation"
                        android:layout_toEndOf="@id/phone_icon"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/my_phone_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/position_text_size" />

                    <ImageView
                        android:id="@+id/qr_code"
                        android:layout_width="@dimen/icon_dim"
                        android:layout_height="@dimen/icon_dim"
                        android:layout_below="@id/phone_icon"
                        android:layout_alignStart="@id/phone_icon"
                        android:layout_marginTop="@dimen/indentation"
                        android:paddingBottom="@dimen/about_activity_margin"
                        app:srcCompat="@drawable/qr_code" />

                    <ImageView
                        android:id="@+id/my_web_link"
                        android:layout_width="@dimen/icon_dim_width"
                        android:layout_height="@dimen/icon_dim"
                        android:layout_alignBottom="@+id/qr_code"
                        android:layout_marginStart="@dimen/about_activity_margin"
                        android:layout_toStartOf="@id/my_photo"
                        android:layout_toEndOf="@+id/qr_code"
                        android:paddingBottom="@dimen/about_activity_margin"
                        app:srcCompat="@drawable/hh_logo" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/item_news_corner_radius"
                app:cardElevation="@dimen/item_news_elevation"
                app:cardUseCompatPadding="true">


                <RelativeLayout
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/social"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/dark_background" />

                    <TextView
                        android:id="@+id/about_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/about_activity_margin"
                        android:text="@string/about_me"
                        android:textColor="@color/colorGrey" />

                    <View
                        android:id="@+id/top_view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/about_me"
                        android:layout_marginStart="@dimen/about_activity_margin"
                        android:layout_marginEnd="@dimen/about_activity_margin"
                        android:background="@color/colorYellow" />

                    <EditText
                        android:id="@+id/message_enter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/top_view"
                        android:layout_marginStart="@dimen/about_activity_margin"
                        android:layout_marginTop="@dimen/indentation"
                        android:layout_marginEnd="@dimen/about_activity_margin"
                        android:ems="10"
                        android:hint="@string/hint"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorGrey"
                        android:textColorHighlight="@color/colorYellow"
                        android:textColorHint="@color/colorGrey" />

                    <View
                        android:id="@+id/bottom_view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/message_enter"
                        android:layout_marginStart="@dimen/about_activity_margin"
                        android:layout_marginTop="@dimen/about_activity_margin"
                        android:layout_marginEnd="@dimen/about_activity_margin"
                        android:background="@color/colorYellow" />

                    <Button
                        android:id="@+id/send_message_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bottom_view"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/indentation"
                        android:layout_marginEnd="@dimen/about_activity_margin"
                        android:layout_marginBottom="@dimen/indentation"
                        android:background="@android:color/transparent"
                        android:text="@string/action_send_message"
                        android:textColor="@color/colorGrey" />

                    <LinearLayout
                        android:id="@+id/social"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/send_message_btn"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/about_activity_margin">


                        <ImageView
                            android:id="@+id/instagram_logo"
                            android:layout_width="@dimen/social_icon_dim"
                            android:layout_height="@dimen/social_icon_dim"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/instagram_logo" />

                        <ImageView
                            android:id="@+id/whatsapp_logo"
                            android:layout_width="@dimen/social_icon_dim"
                            android:layout_height="@dimen/social_icon_dim"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/whatsapp_logo" />

                        <ImageView
                            android:id="@+id/facebook_logo"
                            android:layout_width="@dimen/social_icon_dim"
                            android:layout_height="@dimen/social_icon_dim"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/facebook_logo" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>